# dde-dock-monitor-plugin

./: .gitignore  CMakeLists.txt
debian/: changelog  control  copyright  rules
gschema/: com.deepin.dde.dock.module.sys-monitor.gschema.xml
src/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  common.h  mainwidget.cpp  mainwidget.h  pluginsettingdialog.cpp  pluginsettingdialog.h  pluginsettingdialog.ui  streamchart.cpp  streamchart.h  sys-monitor.json  sysmonitorplugin.cpp  sysmonitorplugin.h  type.h  widgetplugin.hpp
